<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/papel_parede"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:paddingTop="2dip"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_vertical"
	    android:orientation="vertical" >
	
	   <!-- BOTÃO LOGIN -->
	   <ImageButton
	       android:id="@+id/botaoEntrar"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_marginBottom="25dip"
	       android:layout_gravity="center"
	       android:background="@null"
	       android:contentDescription="@string/enter"
	       android:onClick="clicarBotaoEntrar"
	       android:src="@drawable/carregar_botao_entrar" />
	
	    <!-- BOTÃO CRIAR CONTA -->
	    <ImageButton
	        android:id="@+id/botaoNovaConta"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginBottom="25dip"
	        android:background="@null"
	        android:contentDescription="@string/new_account"
	        android:onClick="clicarBotaoNovaConta"
	        android:src="@drawable/carregar_botao_nova_conta" />

	    <CheckBox
	        android:id="@+id/chManterUsuarioLogado"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:onClick="clicarChManterUsuarioLogado"
	        android:text="@string/keep_loged_in" />

    </LinearLayout>

</LinearLayout>
