<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/papel_parede"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:paddingTop="2dip"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dip"
        android:layout_marginLeft="10dip"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" 
            android:layout_marginBottom="15dip">

            <EditText
                android:id="@+id/nomeParaAutenticar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center_horizontal"
            android:layout_marginBottom="15dip">

            <EditText
                android:id="@+id/senhaParaAutenticar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/saveButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/enter"
                android:onClick="clicarBotaoEntrar"
                android:background="@null"
                android:src="@drawable/carregar_botao_entrar" />
        </TableRow>
    </TableLayout>
	
</LinearLayout>
